<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">04-VariosLayout</string>
    <string name="action_settings">Settings</string>
    <string name="relativeText">Layout Relativo</string>
	<string name="table_text1">Layout de Tabla</string>
	<string name="table_text2">Layout de Tabla, Texto 2</string>
	<string name="table_text3">Texto 1</string>
	<string name="pie">Pie</string>
</resources>
